force-app/main/default/objects/vlocity_ins__QuoteLineItemGroupClass__c/fields/vlocity_ins__GroupClassId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GroupClassId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Id of the group class for which the quote line item is defined.</description>
    <label>Group Class</label>
    <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
    <relationshipLabel>Quote Line Item Group Class</relationshipLabel>
    <relationshipName>QuoteLineItemGroupClasses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>