force-app/main/default/objects/vlocity_ins__QuoteLineItemGroupClass__c/fields/vlocity_ins__QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Id of the quote line item for which the group class is defined.</description>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Item Group Class</relationshipLabel>
    <relationshipName>QuoteLineItemGroupClasses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>